--- a/kissskia/Themes/Generic.xaml
+++ b/kissskia/Themes/Generic.xaml
@@ -1,54 +1,44 @@
-<ResourceDictionary
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:kissskia">
+<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                    xmlns:win2dcanvas="using:Microsoft.Graphics.Canvas.UI.Xaml"
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:skia="using:SkiaSharp.Views.Windows"
+                    xmlns:local="using:kissskia">
 
-    <Style TargetType="local:HexBox" >
+    <Style TargetType="local:HexBox">
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="local:HexBox">
-                    <Grid>
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="*" />
-                            <RowDefinition Height="Auto" />
-                        </Grid.RowDefinitions>
+                    <Grid Margin="{TemplateBinding Margin}"
+                          VerticalAlignment="Stretch"
+                          HorizontalAlignment="Stretch"
+                          Background="{TemplateBinding Background}"
+                          BorderThickness="{TemplateBinding BorderThickness}"
+                          BorderBrush="{TemplateBinding BorderBrush}">
+                        
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="*" />
-                            <ColumnDefinition Width="Auto" />
+                            <ColumnDefinition Width="16" />
                         </Grid.ColumnDefinitions>
+                        <skia:SKXamlCanvas Name="PartCanvas"
+                                           Margin="2,0,2,0"
+                                           Grid.Column="0"
+                                           VerticalAlignment="Stretch"
+                                           HorizontalAlignment="Stretch">
+                        </skia:SKXamlCanvas>
 
-                        <Canvas Name="PART_Canvas"
-                                Background="{TemplateBinding Background}"
-                                Margin="5">
-                            <Canvas.ContextFlyout>
-                                <MenuFlyout>
-                                    <MenuFlyoutItem Text="Copy"
-                                                    Icon="Copy">
-                                        <MenuFlyoutItem.Command>
-                                            <Binding  RelativeSource="{RelativeSource TemplatedParent}"
-                                                      Path="CopyCommand"></Binding>
-                                        </MenuFlyoutItem.Command>
-                                    </MenuFlyoutItem>
-                                    <MenuFlyoutItem Text="Paste"
-                                                    Icon="Paste">
-                                        <MenuFlyoutItem.Command>
-                                            <Binding  RelativeSource="{RelativeSource TemplatedParent}"
-                                                      Path="PasteCommand"></Binding>
-                                        </MenuFlyoutItem.Command>
-                                    </MenuFlyoutItem>
-                                    <MenuFlyoutItem Text="Delete"
-                                                    Icon="Delete">
-                                        <MenuFlyoutItem.Command>
-                                            <Binding  RelativeSource="{RelativeSource TemplatedParent}"
-                                                      Path="DeleteCommand"></Binding>
-                                        </MenuFlyoutItem.Command>
-                                    </MenuFlyoutItem>
-                                </MenuFlyout>
-                            </Canvas.ContextFlyout>
-                        </Canvas>
+                        <!--<win2dcanvas:CanvasControl Name="PartCanvas"
+                                                   Margin="2,0,2,0"
+                                                   BorderThickness="2"
+                                                   BorderBrush="Green"
+                                                   Grid.Column="0">
+                        </win2dcanvas:CanvasControl>-->
 
-                        <ScrollBar Name="PART_VerticalScrollBar"
-                                   Grid.Column="1" />
+                        <ScrollBar Name="PartVerticalScrollBar"
+                                   Grid.Column="1"
+                                   VerticalAlignment="Stretch"
+                                   BorderThickness="2"
+                                   BorderBrush="Red"
+                                   Margin="0,0,2,0"/>
                     </Grid>
                 </ControlTemplate>
             </Setter.Value>
