--- a/kissskia/MainWindow.xaml
+++ b/kissskia/MainWindow.xaml
@@ -11,13 +11,15 @@
 
     <Grid Background="{ThemeResource AppBarBackgroundThemeBrush}"
           VerticalAlignment="Stretch"
-          HorizontalAlignment="Stretch">
+          HorizontalAlignment="Stretch"
+          Name="Root">
         <Grid.RowDefinitions>
             <RowDefinition Height="48" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
         <Border Grid.Row="0"
-                Name="AppTitleBar">
+                Name="AppTitleBar"
+                IsTabStop="False">
             <StackPanel Orientation="Horizontal"
                         VerticalAlignment="Center"
                         HorizontalAlignment="Left">
@@ -27,17 +29,14 @@
                            Margin="8,0,0,0">KissSkia</TextBlock>
             </StackPanel>
         </Border>
-        <!--<skia:SKXamlCanvas Grid.Column="2"
-                           Height="400"
-                           PaintSurface="SKXamlCanvas_PaintSurface" />-->
         <local:HexBox  Grid.Row="1"
-                       Name="HexViewer"
+                       x:Name="HexViewer"
                        DataSource="{x:Bind Reader}"
                        Columns="{Binding RelativeSource={RelativeSource Self},Path=MaxVisibleColumns}"
                        Background="Transparent"
                        Margin="4"
                        BorderBrush="Blue"
-                       BorderThickness="2">
+                       BorderThickness="1">
         </local:HexBox>
     </Grid>
 </WinEx:WindowEx>
