--- a/kissskia/Themes/Generic.xaml
+++ b/kissskia/Themes/Generic.xaml
@@ -1,5 +1,4 @@
 <ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:win2dcanvas="using:Microsoft.Graphics.Canvas.UI.Xaml"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:skia="using:SkiaSharp.Views.Windows"
                     xmlns:local="using:kissskia">
@@ -13,18 +12,64 @@
                           HorizontalAlignment="Stretch"
                           Background="{TemplateBinding Background}"
                           BorderThickness="{TemplateBinding BorderThickness}"
-                          BorderBrush="{TemplateBinding BorderBrush}">
-                        
+                          BorderBrush="{TemplateBinding BorderBrush}"
+                          IsTabStop="False">
+
+                        <Grid.Resources>
+                            <MenuFlyout x:Key="DataMenuFlyout">
+                                <ToggleMenuFlyoutItem Text="No Data"
+                                                      IsChecked="False" />
+                                <ToggleMenuFlyoutItem Text="1 Byte-Integer"
+                                                      IsChecked="True" />
+                                <ToggleMenuFlyoutItem Text="2 Byte-Integer"
+                                                      IsChecked="False" />
+                                <ToggleMenuFlyoutItem Text="4 Byte-Integer"
+                                                      IsChecked="False" />
+                                <ToggleMenuFlyoutItem Text="8 Byte-Integer"
+                                                      IsChecked="False" />
+                                <ToggleMenuFlyoutItem Text="32-bit Floating Point"
+                                                      IsChecked="False" />
+                                <ToggleMenuFlyoutItem Text="64-bit Floating Point"
+                                                      IsChecked="False" />
+                                <MenuFlyoutSeparator />
+                                <ToggleMenuFlyoutItem Text="Decimal Signed"
+                                                      IsChecked="False" />
+                                <ToggleMenuFlyoutItem Text="Decimal Unsigned"
+                                                      IsChecked="False" />
+                                <ToggleMenuFlyoutItem Text="Hexadecimal Signed"
+                                                      IsChecked="False" />
+                                <ToggleMenuFlyoutItem Text="Hexadecimal Unsigned"
+                                                      IsChecked="True" />
+                                <MenuFlyoutSeparator />
+                                <ToggleMenuFlyoutItem Text="Big-Endian"
+                                                      IsChecked="False" />
+                                <ToggleMenuFlyoutItem Text="Little-Endian"
+                                                      IsChecked="True" />
+                                <MenuFlyoutSeparator />
+                                <ToggleMenuFlyoutItem Text="No Text"
+                                                      IsChecked="False" />
+                                <ToggleMenuFlyoutItem Text="ASCII"
+                                                      IsChecked="True" />
+                                <MenuFlyoutSeparator />
+                                <MenuFlyoutItem Text="Copy"
+                                                Icon="Copy"
+                                                Command="{Binding RelativeSource={RelativeSource Mode=TemplatedParent}, Path=CopyCommand}" />
+                            </MenuFlyout>
+                        </Grid.Resources>
+
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="*" />
                             <ColumnDefinition Width="24" />
                         </Grid.ColumnDefinitions>
-                        
+
                         <skia:SKXamlCanvas Grid.Column="0"
                                            Name="PartCanvas"
                                            Margin="2,0,2,0"
                                            VerticalAlignment="Stretch"
-                                           HorizontalAlignment="Stretch" />
+                                           HorizontalAlignment="Stretch"
+                                           IsTabStop="False"
+                                           ContextFlyout="{StaticResource DataMenuFlyout}">
+                        </skia:SKXamlCanvas>
 
                         <ScrollBar Grid.Column="1"
                                    Name="PartVerticalScrollBar"
@@ -32,7 +77,8 @@
                                    HorizontalAlignment="Stretch"
                                    Margin="0,0,2,0"
                                    IndicatorMode="MouseIndicator"
-                                   Orientation="Vertical"/>
+                                   Orientation="Vertical"
+                                   IsTabStop="False" />
                     </Grid>
                 </ControlTemplate>
             </Setter.Value>
