--- a/HexBox.WinUI/Themes/Generic.xaml
+++ b/HexBox.WinUI/Themes/Generic.xaml
@@ -1,20 +1,22 @@
-<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:skia="using:SkiaSharp.Views.Windows"
-                    xmlns:convert="using:CommunityToolkit.WinUI.Converters"
-                    xmlns:local="using:HexBox.WinUI">
+<ResourceDictionary
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:convert="using:CommunityToolkit.WinUI.Converters"
+    xmlns:local="using:HexBox.WinUI"
+    xmlns:skia="using:SkiaSharp.Views.Windows">
 
     <Style TargetType="local:HexBox">
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="local:HexBox">
-                    <Grid Margin="{TemplateBinding Margin}"
-                          VerticalAlignment="Stretch"
-                          HorizontalAlignment="Stretch"
-                          Background="{TemplateBinding Background}"
-                          BorderThickness="{TemplateBinding BorderThickness}"
-                          BorderBrush="{TemplateBinding BorderBrush}"
-                          IsTabStop="False">
+                    <Grid
+                        Margin="{TemplateBinding Margin}"
+                        HorizontalAlignment="Stretch"
+                        VerticalAlignment="Stretch"
+                        Background="{TemplateBinding Background}"
+                        BorderBrush="{TemplateBinding BorderBrush}"
+                        BorderThickness="{TemplateBinding BorderThickness}"
+                        IsTabStop="False">
 
                         <Grid.Resources>
                             <convert:BoolNegationConverter x:Key="BoolNegationConverter" />
@@ -24,58 +26,62 @@
                             <local:HexboxDataFormatBoolConverter x:Key="HexboxDataFormatBoolConverter" />
                             <local:HexboxDataTypeConverter x:Key="HexboxDataTypeConverter" />
                             <MenuFlyout x:Key="DataMenuFlyout">
-                                <ToggleMenuFlyoutItem Text="No Data"
-                                                      IsChecked="{Binding ShowData, RelativeSource={RelativeSource Mode=TemplatedParent}, Mode=TwoWay, Converter={StaticResource BoolNegationConverter}}" />
-                                <RadioMenuFlyoutItem Text="1 byte-integer"
-                                                     IsEnabled="{Binding ShowData, RelativeSource={RelativeSource Mode=TemplatedParent}}"
-                                                     IsChecked="{Binding DataType, RelativeSource={RelativeSource Mode=TemplatedParent}, Mode=TwoWay, Converter={StaticResource HexboxDataTypeConverter}, ConverterParameter=Int_1}"
-                                                     GroupName="DataType" />
-                                <RadioMenuFlyoutItem Text="2 byte-integer"
-                                                     IsEnabled="{Binding ShowData, RelativeSource={RelativeSource Mode=TemplatedParent}}"
-                                                     IsChecked="{Binding DataType, RelativeSource={RelativeSource Mode=TemplatedParent}, Mode=TwoWay, Converter={StaticResource HexboxDataTypeConverter}, ConverterParameter=Int_2}"
-                                                     GroupName="DataType" />
-                                <RadioMenuFlyoutItem Text="4 byte-integer"
-                                                     IsEnabled="{Binding ShowData, RelativeSource={RelativeSource Mode=TemplatedParent}}"
-                                                     IsChecked="{Binding DataType, RelativeSource={RelativeSource Mode=TemplatedParent}, Mode=TwoWay, Converter={StaticResource HexboxDataTypeConverter}, ConverterParameter=Int_4}"
-                                                     GroupName="DataType" />
-                                <RadioMenuFlyoutItem Text="8 byte-integer"
-                                                     IsEnabled="{Binding ShowData, RelativeSource={RelativeSource Mode=TemplatedParent}}"
-                                                     IsChecked="{Binding DataType, RelativeSource={RelativeSource Mode=TemplatedParent}, Mode=TwoWay, Converter={StaticResource HexboxDataTypeConverter}, ConverterParameter=Int_8}"
-                                                     GroupName="DataType" />
-                                <RadioMenuFlyoutItem Text="32-bit Floating Point"
-                                                     IsEnabled="{Binding ShowData, RelativeSource={RelativeSource Mode=TemplatedParent}}"
-                                                     IsChecked="{Binding DataType, RelativeSource={RelativeSource Mode=TemplatedParent}, Mode=TwoWay, Converter={StaticResource HexboxDataTypeConverter}, ConverterParameter=Float_32}"
-                                                     GroupName="DataType" />
-                                <RadioMenuFlyoutItem Text="64-bit Floating Point"
-                                                     IsEnabled="{Binding ShowData, RelativeSource={RelativeSource Mode=TemplatedParent}}"
-                                                     IsChecked="{Binding DataType, RelativeSource={RelativeSource Mode=TemplatedParent}, Mode=TwoWay, Converter={StaticResource HexboxDataTypeConverter}, ConverterParameter=Float_64}"
-                                                     GroupName="DataType" />
+                                <ToggleMenuFlyoutItem IsChecked="{Binding ShowData, RelativeSource={RelativeSource Mode=TemplatedParent}, Mode=TwoWay, Converter={StaticResource BoolNegationConverter}}" Text="No Data" />
+                                <RadioMenuFlyoutItem
+                                    GroupName="DataType"
+                                    IsChecked="{Binding DataType, RelativeSource={RelativeSource Mode=TemplatedParent}, Mode=TwoWay, Converter={StaticResource HexboxDataTypeConverter}, ConverterParameter=Int_1}"
+                                    IsEnabled="{Binding ShowData, RelativeSource={RelativeSource Mode=TemplatedParent}}"
+                                    Text="1 byte-integer" />
+                                <RadioMenuFlyoutItem
+                                    GroupName="DataType"
+                                    IsChecked="{Binding DataType, RelativeSource={RelativeSource Mode=TemplatedParent}, Mode=TwoWay, Converter={StaticResource HexboxDataTypeConverter}, ConverterParameter=Int_2}"
+                                    IsEnabled="{Binding ShowData, RelativeSource={RelativeSource Mode=TemplatedParent}}"
+                                    Text="2 byte-integer" />
+                                <RadioMenuFlyoutItem
+                                    GroupName="DataType"
+                                    IsChecked="{Binding DataType, RelativeSource={RelativeSource Mode=TemplatedParent}, Mode=TwoWay, Converter={StaticResource HexboxDataTypeConverter}, ConverterParameter=Int_4}"
+                                    IsEnabled="{Binding ShowData, RelativeSource={RelativeSource Mode=TemplatedParent}}"
+                                    Text="4 byte-integer" />
+                                <RadioMenuFlyoutItem
+                                    GroupName="DataType"
+                                    IsChecked="{Binding DataType, RelativeSource={RelativeSource Mode=TemplatedParent}, Mode=TwoWay, Converter={StaticResource HexboxDataTypeConverter}, ConverterParameter=Int_8}"
+                                    IsEnabled="{Binding ShowData, RelativeSource={RelativeSource Mode=TemplatedParent}}"
+                                    Text="8 byte-integer" />
+                                <RadioMenuFlyoutItem
+                                    GroupName="DataType"
+                                    IsChecked="{Binding DataType, RelativeSource={RelativeSource Mode=TemplatedParent}, Mode=TwoWay, Converter={StaticResource HexboxDataTypeConverter}, ConverterParameter=Float_32}"
+                                    IsEnabled="{Binding ShowData, RelativeSource={RelativeSource Mode=TemplatedParent}}"
+                                    Text="32-bit Floating Point" />
+                                <RadioMenuFlyoutItem
+                                    GroupName="DataType"
+                                    IsChecked="{Binding DataType, RelativeSource={RelativeSource Mode=TemplatedParent}, Mode=TwoWay, Converter={StaticResource HexboxDataTypeConverter}, ConverterParameter=Float_64}"
+                                    IsEnabled="{Binding ShowData, RelativeSource={RelativeSource Mode=TemplatedParent}}"
+                                    Text="64-bit Floating Point" />
                                 <MenuFlyoutSeparator />
-                                <ToggleMenuFlyoutItem Text="Signed"
-                                                      IsEnabled="{Binding DataFormat, RelativeSource={RelativeSource Mode=TemplatedParent}, Converter={StaticResource HexboxDataFormatBoolConverter}, ConverterParameter={Binding DataFormat}}"
-                                                      IsChecked="{Binding DataSignedness, RelativeSource={RelativeSource Mode=TemplatedParent}, Mode=TwoWay, Converter={StaticResource HexboxDataSignednessConverter}, ConverterParameter=Signed}" />
-                                <ToggleMenuFlyoutItem Text="Unsigned"
-                                                      IsEnabled="{Binding DataFormat, RelativeSource={RelativeSource Mode=TemplatedParent}, Converter={StaticResource HexboxDataFormatBoolConverter}, ConverterParameter={Binding DataFormat}}"
-                                                      IsChecked="{Binding DataSignedness, RelativeSource={RelativeSource Mode=TemplatedParent}, Mode=TwoWay, Converter={StaticResource HexboxDataSignednessConverter}, ConverterParameter=Unsigned}" />
-                                <ToggleMenuFlyoutItem Text="Decimal"
-                                                      IsChecked="{Binding DataFormat, RelativeSource={RelativeSource Mode=TemplatedParent}, Mode=TwoWay, Converter={StaticResource HexboxDataFormatConverter}, ConverterParameter=Decimal}" />
-                                <ToggleMenuFlyoutItem Text="Hexadecimal"
-                                                      IsChecked="{Binding DataFormat, RelativeSource={RelativeSource Mode=TemplatedParent}, Mode=TwoWay, Converter={StaticResource HexboxDataFormatConverter}, ConverterParameter=Hexadecimal}" />
+                                <ToggleMenuFlyoutItem
+                                    IsChecked="{Binding DataSignedness, RelativeSource={RelativeSource Mode=TemplatedParent}, Mode=TwoWay, Converter={StaticResource HexboxDataSignednessConverter}, ConverterParameter=Signed}"
+                                    IsEnabled="{Binding DataFormat, RelativeSource={RelativeSource Mode=TemplatedParent}, Converter={StaticResource HexboxDataFormatBoolConverter}, ConverterParameter={Binding DataFormat}}"
+                                    Text="Signed" />
+                                <ToggleMenuFlyoutItem
+                                    IsChecked="{Binding DataSignedness, RelativeSource={RelativeSource Mode=TemplatedParent}, Mode=TwoWay, Converter={StaticResource HexboxDataSignednessConverter}, ConverterParameter=Unsigned}"
+                                    IsEnabled="{Binding DataFormat, RelativeSource={RelativeSource Mode=TemplatedParent}, Converter={StaticResource HexboxDataFormatBoolConverter}, ConverterParameter={Binding DataFormat}}"
+                                    Text="Unsigned" />
+                                <ToggleMenuFlyoutItem IsChecked="{Binding DataFormat, RelativeSource={RelativeSource Mode=TemplatedParent}, Mode=TwoWay, Converter={StaticResource HexboxDataFormatConverter}, ConverterParameter=Decimal}" Text="Decimal" />
+                                <ToggleMenuFlyoutItem IsChecked="{Binding DataFormat, RelativeSource={RelativeSource Mode=TemplatedParent}, Mode=TwoWay, Converter={StaticResource HexboxDataFormatConverter}, ConverterParameter=Hexadecimal}" Text="Hexadecimal" />
                                 <MenuFlyoutSeparator />
-                                <ToggleMenuFlyoutItem Text="Big-Endian"
-                                                      IsChecked="{Binding Endianness, RelativeSource={RelativeSource Mode=TemplatedParent}, Mode=TwoWay, Converter={StaticResource BigEndianConverter}, ConverterParameter=BigEndian}" />
-                                <ToggleMenuFlyoutItem Text="Little-Endian"
-                                                      IsChecked="{Binding Endianness, RelativeSource={RelativeSource Mode=TemplatedParent}, Mode=TwoWay, Converter={StaticResource BigEndianConverter}, ConverterParameter=LittleEndian}" />
+                                <ToggleMenuFlyoutItem IsChecked="{Binding Endianness, RelativeSource={RelativeSource Mode=TemplatedParent}, Mode=TwoWay, Converter={StaticResource BigEndianConverter}, ConverterParameter=BigEndian}" Text="Big-Endian" />
+                                <ToggleMenuFlyoutItem IsChecked="{Binding Endianness, RelativeSource={RelativeSource Mode=TemplatedParent}, Mode=TwoWay, Converter={StaticResource BigEndianConverter}, ConverterParameter=LittleEndian}" Text="Little-Endian" />
                                 <MenuFlyoutSeparator />
-                                <ToggleMenuFlyoutItem Text="No Text"
-                                                      IsChecked="{Binding ShowText,RelativeSource={RelativeSource Mode=TemplatedParent}, Mode=TwoWay, Converter={StaticResource BoolNegationConverter}}" />
-                                <ToggleMenuFlyoutItem Text="ASCII"
-                                                      IsChecked="{Binding ShowText,RelativeSource={RelativeSource Mode=TemplatedParent}, Mode=TwoWay}"
-                                                      IsEnabled="False" />
+                                <ToggleMenuFlyoutItem IsChecked="{Binding ShowText, RelativeSource={RelativeSource Mode=TemplatedParent}, Mode=TwoWay, Converter={StaticResource BoolNegationConverter}}" Text="No Text" />
+                                <ToggleMenuFlyoutItem
+                                    IsChecked="{Binding ShowText, RelativeSource={RelativeSource Mode=TemplatedParent}, Mode=TwoWay}"
+                                    IsEnabled="False"
+                                    Text="ASCII" />
                                 <MenuFlyoutSeparator />
-                                <MenuFlyoutItem Text="Copy"
-                                                Icon="Copy"
-                                                Command="{Binding CopyCommand, RelativeSource={RelativeSource Mode=TemplatedParent}}" />
+                                <MenuFlyoutItem
+                                    Command="{Binding CopyCommand, RelativeSource={RelativeSource Mode=TemplatedParent}}"
+                                    Icon="Copy"
+                                    Text="Copy" />
                             </MenuFlyout>
                         </Grid.Resources>
 
@@ -84,25 +90,26 @@
                             <ColumnDefinition Width="24" />
                         </Grid.ColumnDefinitions>
 
-                        <skia:SKXamlCanvas Grid.Column="0"
-                                           Name="ElementCanvas"
-                                           Margin="2,0,2,0"
-                                           VerticalAlignment="Stretch"
-                                           HorizontalAlignment="Stretch"
-                                           IsTabStop="False"
-                                           ContextFlyout="{StaticResource DataMenuFlyout}">
-                        </skia:SKXamlCanvas>
+                        <skia:SKXamlCanvas
+                            Name="ElementCanvas"
+                            Grid.Column="0"
+                            Margin="2,0,2,0"
+                            HorizontalAlignment="Stretch"
+                            VerticalAlignment="Stretch"
+                            ContextFlyout="{StaticResource DataMenuFlyout}"
+                            IsTabStop="False" />
 
-                        <ScrollBar Grid.Column="1"
-                                   Name="ElementScrollBar"
-                                   VerticalAlignment="Stretch"
-                                   HorizontalAlignment="Stretch"
-                                   Margin="0,0,2,0"
-                                   IndicatorMode="MouseIndicator"
-                                   Orientation="Vertical"
-                                   IsTabStop="False"
-                                   FontFamily="{TemplateBinding FontFamily}"
-                                   FontSize="{TemplateBinding FontSize}" />
+                        <ScrollBar
+                            Name="ElementScrollBar"
+                            Grid.Column="1"
+                            Margin="0,0,2,0"
+                            HorizontalAlignment="Stretch"
+                            VerticalAlignment="Stretch"
+                            FontFamily="{TemplateBinding FontFamily}"
+                            FontSize="{TemplateBinding FontSize}"
+                            IndicatorMode="MouseIndicator"
+                            IsTabStop="False"
+                            Orientation="Vertical" />
                     </Grid>
                 </ControlTemplate>
             </Setter.Value>
