--- a/HexBox.WinUI/Themes/Generic.xaml
+++ b/HexBox.WinUI/Themes/Generic.xaml
@@ -29,17 +29,30 @@
                                 <MenuFlyoutItem
                                     Command="{Binding CopyCommand, RelativeSource={RelativeSource Mode=TemplatedParent}}"
                                     Icon="Copy"
-                                    Text="Copy" />
+                                    Text="Copy">
+                                    <MenuFlyoutItem.KeyboardAccelerators>
+                                        <KeyboardAccelerator Key="C" Modifiers="Control" />
+                                    </MenuFlyoutItem.KeyboardAccelerators>
+                                </MenuFlyoutItem>
                                 <MenuFlyoutItem
                                     Command="{Binding CopyTextCommand, RelativeSource={RelativeSource Mode=TemplatedParent}}"
                                     Icon="Font"
-                                    Text="Copy text" />
+                                    Text="Copy text">
+                                    <MenuFlyoutItem.KeyboardAccelerators>
+                                        <KeyboardAccelerator Key="T" Modifiers="Control" />
+                                    </MenuFlyoutItem.KeyboardAccelerators>
+                                </MenuFlyoutItem>
+                                <MenuFlyoutItem
+                                    Command="{Binding SelectAllCommand, RelativeSource={RelativeSource Mode=TemplatedParent}}"
+                                    Icon="SelectAll"
+                                    Text="Select all">
+                                    <MenuFlyoutItem.KeyboardAccelerators>
+                                        <KeyboardAccelerator Key="A" Modifiers="Control" />
+                                    </MenuFlyoutItem.KeyboardAccelerators>
+                                </MenuFlyoutItem>
                                 <MenuFlyoutSeparator />
-                                <MenuFlyoutSubItem IsEnabled="{Binding EnforceProperties, RelativeSource={RelativeSource Mode=TemplatedParent}, Mode=OneWay, Converter={StaticResource BoolNegationConverter}}"
-                                                   Text="Address properties">
-                                    <ToggleMenuFlyoutItem
-                                        IsChecked="{Binding ShowAddress, RelativeSource={RelativeSource Mode=TemplatedParent}, Mode=TwoWay, Converter={StaticResource BoolNegationConverter}}"
-                                                     Text="No Address" />
+                                <MenuFlyoutSubItem IsEnabled="{Binding EnforceProperties, RelativeSource={RelativeSource Mode=TemplatedParent}, Mode=OneWay, Converter={StaticResource BoolNegationConverter}}" Text="Address properties">
+                                    <ToggleMenuFlyoutItem IsChecked="{Binding ShowAddress, RelativeSource={RelativeSource Mode=TemplatedParent}, Mode=TwoWay, Converter={StaticResource BoolNegationConverter}}" Text="No Address" />
                                 </MenuFlyoutSubItem>
                                 <MenuFlyoutSubItem IsEnabled="{Binding EnforceProperties, RelativeSource={RelativeSource Mode=TemplatedParent}, Mode=OneWay, Converter={StaticResource BoolNegationConverter}}" Text="Data properties">
                                     <ToggleMenuFlyoutItem IsChecked="{Binding ShowData, RelativeSource={RelativeSource Mode=TemplatedParent}, Mode=TwoWay, Converter={StaticResource BoolNegationConverter}}" Text="No Data" />
@@ -104,23 +117,24 @@
                             <ColumnDefinition Width="24" />
                         </Grid.ColumnDefinitions>
 
-                        <skia:SKXamlCanvas Grid.Column="0"
-                                           Name="ElementCanvas"
-                                           Margin="2,0,2,0"
-                                           VerticalAlignment="Stretch"
-                                           HorizontalAlignment="Stretch"
-                                           ContextFlyout="{StaticResource DataMenuFlyout}">
-                        </skia:SKXamlCanvas>
+                        <skia:SKXamlCanvas
+                            Name="ElementCanvas"
+                            Grid.Column="0"
+                            Margin="2,0,2,0"
+                            HorizontalAlignment="Stretch"
+                            VerticalAlignment="Stretch"
+                            ContextFlyout="{StaticResource DataMenuFlyout}" />
 
-                        <ScrollBar Grid.Column="1"
-                                   Name="ElementScrollBar"
-                                   VerticalAlignment="Stretch"
-                                   HorizontalAlignment="Stretch"
-                                   Margin="0,0,2,0"
-                                   IndicatorMode="MouseIndicator"
-                                   Orientation="Vertical"
-                                   FontFamily="{TemplateBinding FontFamily}"
-                                   FontSize="{TemplateBinding FontSize}" />
+                        <ScrollBar
+                            Name="ElementScrollBar"
+                            Grid.Column="1"
+                            Margin="0,0,2,0"
+                            HorizontalAlignment="Stretch"
+                            VerticalAlignment="Stretch"
+                            FontFamily="{TemplateBinding FontFamily}"
+                            FontSize="{TemplateBinding FontSize}"
+                            IndicatorMode="MouseIndicator"
+                            Orientation="Vertical" />
                     </Grid>
                 </ControlTemplate>
             </Setter.Value>
