switch to ctrl+shift+c
(cherry picked from commit 83ad19c76d5c0601bd6846737c33e8782488aaa3)

--- a/HexBox.WinUI/Themes/Generic.xaml
+++ b/HexBox.WinUI/Themes/Generic.xaml
@@ -39,7 +39,7 @@
                                     Icon="Font"
                                     Text="Copy text">
                                     <MenuFlyoutItem.KeyboardAccelerators>
-                                        <KeyboardAccelerator Key="T" Modifiers="Control" />
+                                        <KeyboardAccelerator Key="C" Modifiers="Control,Shift"/>
                                     </MenuFlyoutItem.KeyboardAccelerators>
                                 </MenuFlyoutItem>
                                 <MenuFlyoutItem
